[package]
name = "zetci"
version = "0.1.0"
edition = "2018"
authors = ["Patrik Lindstrom <patrik.lindstrom.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
csv = "1.0.0-beta.3"
env_logger = "0.11.2"
log = "0.4.20"

